modify sample mode (sample both findcave and goal)

--- a/configs/eval/multi_plains.yaml
+++ b/configs/eval/multi_plains.yaml
@@ -10,8 +10,14 @@ envs:
 
 goals: 
   - 'findcave'
-  -  'log'
+  - 'log'
+  - 'sheep'
+  - 'cow'
+  - 'pig'
 
 env_id:
+  - 0
+  - 0
+  - 0
   - 0
   - 0
